{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 11,
  "lineage": "ddb3fa4e-1d4a-b5e0-4aff-042878ca12cd",
  "resources": [
    {
      "module": "module.simple_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.simple_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:856529633790:internet-gateway/igw-066769cd28a804b0e",
            "id": "igw-066769cd28a804b0e",
            "owner_id": "856529633790",
            "tags": {
              "Name": "mymodulevpc-igw"
            },
            "tags_all": {
              "Name": "mymodulevpc-igw"
            },
            "vpc_id": "vpc-09b8662786909acab"
          },
          "dependencies": [
            "module.simple_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.simple_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.simple_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:856529633790:route-table/rtb-0b1cfe25c3d40551f",
            "id": "rtb-0b1cfe25c3d40551f",
            "owner_id": "856529633790",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-066769cd28a804b0e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mymodulevpc-public-rtb",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "mymodulevpc-public-rtb",
              "Tier": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b8662786909acab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.simple_vpc.aws_internet_gateway.igw",
            "module.simple_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.simple_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.simple_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca24a0cb8daec0b4",
            "route_table_id": "rtb-0b1cfe25c3d40551f",
            "subnet_id": "subnet-030628ecd88106e2d"
          },
          "dependencies": [
            "module.simple_vpc.aws_internet_gateway.igw",
            "module.simple_vpc.aws_route_table.public",
            "module.simple_vpc.aws_subnet.public",
            "module.simple_vpc.aws_vpc.vpc",
            "module.simple_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccb1a2d5cca4d737",
            "route_table_id": "rtb-0b1cfe25c3d40551f",
            "subnet_id": "subnet-029168c3f05cb8df2"
          },
          "dependencies": [
            "module.simple_vpc.aws_internet_gateway.igw",
            "module.simple_vpc.aws_route_table.public",
            "module.simple_vpc.aws_subnet.public",
            "module.simple_vpc.aws_vpc.vpc",
            "module.simple_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00937affd11a53e12",
            "route_table_id": "rtb-0b1cfe25c3d40551f",
            "subnet_id": "subnet-0d71d7a903c48ab29"
          },
          "dependencies": [
            "module.simple_vpc.aws_internet_gateway.igw",
            "module.simple_vpc.aws_route_table.public",
            "module.simple_vpc.aws_subnet.public",
            "module.simple_vpc.aws_vpc.vpc",
            "module.simple_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.simple_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "module.simple_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:856529633790:security-group/sg-0c5caa06ddada9a6f",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5caa06ddada9a6f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "Web security group.",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_sg",
            "name_prefix": "",
            "owner_id": "856529633790",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mymodulevpc-web-sg"
            },
            "tags_all": {
              "Name": "mymodulevpc-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b8662786909acab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.simple_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.simple_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.simple_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:856529633790:subnet/subnet-030628ecd88106e2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030628ecd88106e2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "856529633790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mymodulevpc-subnet-public-us-east-1a",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "mymodulevpc-subnet-public-us-east-1a",
              "Tier": "public"
            },
            "vpc_id": "vpc-09b8662786909acab"
          },
          "dependencies": [
            "module.simple_vpc.aws_vpc.vpc",
            "module.simple_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:856529633790:subnet/subnet-029168c3f05cb8df2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029168c3f05cb8df2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "856529633790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mymodulevpc-subnet-public-us-east-1b",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "mymodulevpc-subnet-public-us-east-1b",
              "Tier": "public"
            },
            "vpc_id": "vpc-09b8662786909acab"
          },
          "dependencies": [
            "module.simple_vpc.aws_vpc.vpc",
            "module.simple_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:856529633790:subnet/subnet-0d71d7a903c48ab29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d71d7a903c48ab29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "856529633790",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mymodulevpc-subnet-public-us-east-1c",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "mymodulevpc-subnet-public-us-east-1c",
              "Tier": "public"
            },
            "vpc_id": "vpc-09b8662786909acab"
          },
          "dependencies": [
            "module.simple_vpc.aws_vpc.vpc",
            "module.simple_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.simple_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.simple_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:856529633790:vpc/vpc-09b8662786909acab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0b648d9899d6e103d",
            "default_route_table_id": "rtb-08c40ee09af15f652",
            "default_security_group_id": "sg-049f523612f850e2b",
            "dhcp_options_id": "dopt-0857174a27fc3302f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09b8662786909acab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08c40ee09af15f652",
            "owner_id": "856529633790",
            "tags": {
              "Name": "mymodulevpc-vpc"
            },
            "tags_all": {
              "Name": "mymodulevpc-vpc"
            }
          }
        }
      ]
    }
  ]
}